<resources>
    <string name="app_name">PlayGame</string>
    <string name="enter_your_email">Enter your email....</string>
    <string name="enter_your_password">Enter your password....</string>
    <string name="sign_in">Sign In</string>
    <string name="you_haven_t_account">You haven\'t account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="you_have_account">You have account?</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
    <string name="connect">Connect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Placement_error">Нельзя расположить корабль</string>
    <string name="set_not_all_ships">Раставленны не все корабли</string>
    <string name="Field_is_empty">На поле нет кораблей</string>
    <string name="Waiting_request">Please wait second player</string>
    <string name="Fight">В бой!</string>
    <string name="Choose_other_type_of_ship">Выберите другой тип корабля</string>
    <string name="Id_room">\nID room: </string>
    <string name="Opponent_move">Ход противника</string>
    <string name="Chose_other_field">Выберите другую клеточку</string>
    <string name="You_lose">Вы проиграли</string>
    <string name="you_win">Победа</string>
    <string name="your_move">Ваш Ход</string>
    <string name="Enter_your_Email">Enter your Email</string>
    <string name="Enter_your_Password">Enter your Password</string>
    <string name="Confirm_your_Password">Confirm your Password</string>
    <string name="error_password">Different password</string>
    <string name="short_password"><![CDATA[Length should be >4]]></string>
    <string name="Invalid_email">Invalid email</string>
    <string name="wait">Please wait...</string>
    <string name="Sign_up_fail">Sign up fail</string>
    <string name="Successfully_registered">Successfully registered</string>
    <string name="Successfully_Login">Successfully Login</string>
    <string name="Sign_in_fail">Sign in fail</string>
    <string name="Empty_testView">Field is empty</string>
    <string name="Room_doesn_t_exist">Room doesn\'t exist</string>
    <string name="Changed_successfully">Changed successfully</string>
    <string name="name_already_exists">This name already exists</string>
    <string name="Select_image">Please Select image</string>
    <string name="Image_uploaded">Image uploaded</string>
    <string name="Uploading_Image">Uploading Image</string>
    <string name="Player1">\"Игрок 1: \"</string>
    <string name="Ship1">\"Кораблей: \"</string>
    <string name="Player2">\" :Игрок 2\"</string>
    <string name="Ship2">\" :Кораблей\"</string>
    <string name="Room">\"Комната: \"</string>
    <string name="Empty">Field is empty!</string>

</resources>