<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/rectangular_field"
        android:hint="Введите название комнаты"
        android:inputType="text"
        android:paddingVertical="15dp"
        android:paddingLeft="60dp"
        android:textColor="#000000" />
    <Button
        android:id="@+id/create"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/create"
        android:textSize="20dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/connect"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/connect"
        android:textSize="20dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="20dp" />
</LinearLayout>