<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:background="#1E88E5"
    tools:context=".Activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="40sp"
         />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangular_field"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="15dp"
            android:paddingLeft="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@android:drawable/ic_dialog_email" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangular_field"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingVertical="15dp"
            android:paddingLeft="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@android:drawable/ic_lock_idle_lock" />

    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back"
        android:textSize="25sp"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_haven_t_account"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/SignUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>